[tool.poetry]
name = "nebula-analytics"
version = "0.1.0"
description = ""
authors = ["tomfutago <tomfutago@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cryptography = "^38.0.2"
psycopg2-binary = "^2.9.4"
apache-superset = "^2.0.0"
python-dotenv = "^0.21.0"
Werkzeug = "^2.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
